# workshop_pipeline

./: README.md  app.py  chroma_vdb.py  contrato.py  gold_vendas_7_dias.json  gold_vendas_por_produto.json  gold_vendas_por_vendedor.json  gold_vendas_por_vendedor_data.json  groq_agente.py  index.html  pyproject.toml  salvar_dados.py
db_scripts/: briefer_analises.sql
search/: search_index.json
site/: index.html
system/: ai_example.py  app.py  create_table.sql  database.py
system/db_scripts/: briefer_analises.sql
vendas_dbt/models/gold/: gold_vendas_por_produto.sql  gold_vendas_por_vendedor_data.sql
vendas_dbt/models/silver/: silver_vendas.sql
