[tool.poetry]
name = "workshop-pipeline"
version = "0.1.0"
description = ""
authors = ["Roberto Guedes <robertoguedes@edu.univali.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pydantic = {extras = ["email"], version = "^2.9.1"}
sqlalchemy = "^2.0.34"
mkdocs = "^1.6.1"
psycopg2-binary = "^2.9.9"
mkdocs-material = "^9.5.34"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
